--- a/src/styles/components.css
+++ b/src/styles/components.css
@@ -1,1 +1,13 @@
 @tailwind components;
+
+.mapboxgl-map {
+    height: 640px;
+}
+
+.mapboxgl-ctrl-top-right {
+    top: 40px;
+}
+
+.fit-bounds-ctrl {
+    box-shadow: 0 0 0 2px rgba(0, 0, 0, 0.1);
+}
